Version 1.2
* Rewrite in ruby/rails
* Removed ICS as a status option
* Changed Tenure options to 'First Year', 'Second Year', 'Exception'
* You can no longer change an applicant's preferences. The "Placement Comments" column should be used to note any needed changes.
* You can no longer add people manually. All entries must come through the front door (the Stint Application Tool).
* You can no longer delete people.

Version 1.1
* Rewrote the PSW SI Tracker in php.
* Integrated with national functionality.

Version 1.0
* PSW SI Tracker writen in ASP (VB 6)