@@ -1,0 +1,32 @@
+<html>
+<head>
+  <%= stylesheet_link_tag 'styles', :media => 'all' %>
+  <%= stylesheet_link_tag 'scaffold', :media => 'all' %>
+  <%= javascript_include_tag :defaults %>
+	<title>Picture Upload</title>
+</head>
+<body bgcolor="#E5E5CC">
+<div class="boxheader">Upload Picture</div>
+<div style="float:right">
+	<%= image_tag(@person.mini_pic) %>
+</div>
+
+<%= error_messages_for 'person' %>
+<ul>
+	<li>Only <strong>GIF</strong> and <strong>JPG</strong> images will be accepted.</li>
+	<li>Please pick a photo that is <strong>at least 200 x 200 pixels</strong>.</li>
+	<li>However, the file must be <strong>smaller than 2MB</strong>.</li>
+	<li>We will automatically crop it to a square aspect ratio and shrink it down to thumbnails.</li>
+	<li>If you already have an image stored here, uploading a new image replaces the current one.</li>
+	<li>Please do not upload offensive images.</li>
+	<li>It can take a few moments to upload. Please be patient.</li>
+</ul>
+
+<%= form_tag( { :action => 'update_image', :id => @person }, :multipart => true, :id => "up_form" ) %>
+  <p><strong>Image to Upload:</strong><br/>
+  <%= file_column_field "person", "image", :size => 65 %></p>
+  <%= submit_tag 'Upload', :onclick => "Element.show('spinner');" %>
+  <%= image_tag 'spinner.gif', :id => 'spinner', :style => 'display:none' %>
+<%= end_form_tag %>
+</body>
+</html>
