@@ -5,6 +5,7 @@ require 'child_controller'
 class ChildController; def rescue_action(e) raise e end; end
 
 class ChildControllerTest < Test::Unit::TestCase
+  fixtures :sitrack_children, :ministry_person
   def setup
     @controller = ChildController.new
     @request    = ActionController::TestRequest.new
@@ -16,22 +17,22 @@ class ChildControllerTest < Test::Unit::TestCase
 
   # really basic bare minimum tests
   def test_add_child
-    get :add_child
+    get :add_child, :id => 102546
     assert_response :success
   end
   
   def test_edit_child
-    get :edit_child
+    get :edit_child, :id => 1
     assert_response :success
   end
   
   def test_save_child
-    post :save_child, :child => {:name => 'bob', :birthday => '5/5/2000'}
+    post :save_child, :child => {:id => 1, :name => 'bob', :birthday => '5/5/2000', :person_id => 102546}
     assert_response :success
   end
   
   def test_delete_child
-    xhr :post, :delete_child
+    xhr :post, :delete_child, :id => 1
     assert_response :success
   end
 end
