@@ -1,0 +1,8 @@
+require 'test/unit'
+
+#Unit tests.
+
+#Functional tests.
+require 'functional/directory_controller_test.rb'
+require 'functional/profile_controller_test.rb'
+require 'functional/child_controller_test.rb'
