@@ -5,6 +5,7 @@ Version 1.2
 * You can no longer change an applicant's preferences. The "Placement Comments" column should be used to note any needed changes.
 * You can no longer add people manually. All entries must come through the front door (the Stint Application Tool).
 * You can no longer delete people.
+* Improved the display of uploaded pictures in the directory.
 
 Version 1.1
 * Rewrote the PSW SI Tracker in php.
